--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -149,10 +149,3 @@
     }
 
 }
-
-@media (max-width: 320) {
-    .menuDropdown a, .menuDropdown a::before, .menuDropdown a:hover, .menuDropdown a:hover::before {
-        transition: 0s cubic-bezier(0.25, 0.1, 0.25, 1);
-    }
-
-}
